[gd_scene load_steps=2 format=3 uid="uid://cx2bbps5kffn8"]

[ext_resource type="Script" path="res://scenes/popups/save_as.gd" id="1_63vsq"]

[node name="SaveAs" type="ConfirmationDialog"]
title = "SAVE_AS"
size = Vector2i(400, 118)
visible = true
min_size = Vector2i(400, 100)
ok_button_text = "OKAY"
cancel_button_text = "CANCEL"
script = ExtResource("1_63vsq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ENTER_SAVE_NAME"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "game"

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_custom_action"]
